Fix mobile search overlap

--- a/frontend/website/src/Header/SearchBar/SearchBar.css
+++ b/frontend/website/src/Header/SearchBar/SearchBar.css
@@ -146,7 +146,7 @@ input[type="search"]::-webkit-search-cancel-button {
         margin: 0 16px;
     }
 
-    .ais-Hits-list {
+    .ais-Hits {
         position: fixed;
         left: 0;
         right: 0;
